--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
-    <router-outlet></router-outlet>
+<!-- <div>
+    <h1> {{"HELLO" | translate}}</h1>
+    <h2>Hola</h2>
+</div> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
