--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -3,24 +3,14 @@
         <div class="section-box">
             <div class="about-title" data-aos="fade-up">
                 <h3 class="section-title">
-                    <span class='n-section-title'>01.</span> Acerca de mi
+                    <span class='n-section-title'>01.</span> {{"AboutMe.Title" | translate}}
                 </h3>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <div class="about-description">
-                        <p data-aos="fade-up" data-aos-duration="1000">
-                            En mis 4 años como desarrollador busco capacitarme cada día. Al
-                            mismo tiempo he trabajado escribiendo pruebas unitarias, realizando integración continua y también cubriendo roles
-                            de backend developer con Laravel, ExpressJS, Mysql y MongoDB. También he liderado equipos
-                            teniendo empatía, ejerciendo motivación a compañeros y estableciendo planes y metas en conjunto.
-                        </p>
-                        <p data-aos="fade-up" data-aos-duration="1000">
-                            Mis capacidades también incluyen implementar mejoras en sistemas, optimizar sitios, estandarizar patrones y 
-                            sugerir y ejecutar ideas que añadan valor al proyecto en el que este trabajando
-                        </p>
-                        <p data-aos="fade-up" data-aos-duration="1000">
-                            Algunas de las tecnologías en las que me he capacitado y trabajado incluyen (pero no se limitan) a:
+                        <p *ngFor='let text of "AboutMe.Paragraphs" | translate' data-aos="fade-up" data-aos-duration="1000">
+                            {{text}}
                         </p>
                         <ul class="skills-list" data-aos="fade-up">
                             <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Angular</li>
