--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -3,24 +3,25 @@
         <div class="section-box-banner">
             <div class="content">
                 <div>
-                    <h1>Hola, mi nombre es</h1>
+                    <!-- <h1>Hola, mi nombre es</h1> -->
+                    <h1>{{"Banner.Pretitle" | translate}}</h1>
                 </div>
                 <div class='banner-title'>
                     <h2>José Hernández.</h2>
                     <h3>Frontend Developer</h3>
                 </div>
-                <div class='banner-description' >
+                <div class='banner-description'>
                     <p class="mt-4">
 
-                        Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas 
-                        para hacer de la web un lugar mejor. En mi trabajo me gusta liderar, proponer y ejecutar ideas, escribir
-                        y refactorizar código limpio, reutilizable y escalable.
+                        {{"Banner.Description" | translate}}
 
                     </p>
                 </div>
             </div>
-            <div class="div-btn-banner" >
-                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:andresjosehr@gmail.com" target="_black" class="main-btn">¡Saludame!</a>
+            <div class="div-btn-banner">
+                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:andresjosehr@gmail.com" target="_black" class="main-btn">
+                    {{"Banner.ActionBtn" | translate}}
+                </a>
             </div>
         </div>
     </div>
