--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -2,17 +2,17 @@
     <div class="container">
         <div class="section-box">
             <div class="mb-4" data-aos="fade-up" data-aos-duration="1000">
-                <h3 class="contact-pre-title big-subtitle">05. Y... ¿Ahora?</h3>
+                <h3 class="contact-pre-title big-subtitle">05. {{"Contact.Pretitle" | translate}}</h3>
                 <h4 class="e-font contact-title big-title">
-                    ¡Saludame!
+                    {{"Contact.Title" | translate}}
                 </h4>
             </div>
             <p data-aos="fade-up" data-aos-duration="1000">
-                Estaré encantado de recibir tu contacto si quieres conversar acerca de nuevas oportunidades. Escríbeme, y te responderé tan pronto como vea tu mensaje.
+                {{"Contact.Content" | translate}}
             </p>
             <div class="mt-5">
                 <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "contact", "email")' href="mailto:andresjosehr@gmail.com" target="_blank" class="main-btn" data-aos="fade-up" data-aos-duration="1000">
-                    Contacto
+                    {{"Contact.Btn" | translate}}
                 </a>
             </div>
         </div>
