--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -8,15 +8,22 @@
             </div>
 
             <div *ngFor='let project of "FeatureProjects.Projects" | translate; let i = index' class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                <owl-carousel-o [options]="customOptions" *ngIf="i%2==0" style="width: 600px;">
+                <owl-carousel-o class='owl-carousel-o' [options]="customOptions" *ngIf="i%2==0">
                     <ng-container *ngFor="let img of project.imgs">
                         <ng-template carouselSlide [id]="project.Title+slide+i">
                             <div #imgContainer class='img-container'>
-                                <img class='img-feature-proyect rounded' [src]="img" [alt]="project.Title" width='600px'>
+                                <img class='img-feature-proyect rounded' [src]="img" [alt]="project.Title">
                             </div>
                         </ng-template>
                     </ng-container>
                 </owl-carousel-o>
+                <div class="img-feature-proyect-container" data-aos="fade-up" data-aos-duration="1000" *ngIf="i%2==0">
+                    <div class="img-feature-proyect-box">
+                        <div class="img-container" style='width: auto;'>
+                            <img class='img-feature-proyect rounded' [src]="project.imgs[0]" [alt]="project.imgs[0]" width='600px'>
+                        </div>
+                    </div>
+                </div>
                 <div [class.proyect-info-right]='i%2==0' [class.proyect-info-left]='i%2!=0' class="h-100" style="background-image: url('{{project.img}}');">
                     <div class="proyect-box">
                         <h4 [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="feature-proyect">{{"FeatureProjects.Label" | translate}}</h4>
@@ -31,20 +38,27 @@
                             <li *ngFor='let technology of project.Technologies' class="ml-3">{{technology}}</li>
                         </ul>
                         <div [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="proyect-links">
-                            <a style='color: inherit' [href]="project['gh-link']" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                            <a style='color: inherit' [href]="project['demo-link']" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                            <a *ngIf="project['gh-link']" style='color: inherit' [href]="project['gh-link']" target="_blank"><i class="ml-3 fab fa-github"></i></a>
+                            <a style='color: inherit' [href]="project['Link-demo']" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                 </div>
-                <owl-carousel-o [options]="customOptions" *ngIf="i%2!=0" style="width: 600px;">
+                <owl-carousel-o class='owl-carousel-o' [options]="customOptions" *ngIf="i%2!=0">
                     <ng-container *ngFor="let img of project.imgs">
                         <ng-template carouselSlide [id]="project.Title+slide+i">
                             <div class='img-container'>
-                                <img class='img-feature-proyect rounded' [src]="img" [alt]="project.Title" width='600px'>
+                                <img class='img-feature-proyect rounded' [src]="img" [alt]="project.Title">
                             </div>
                         </ng-template>
                     </ng-container>
                 </owl-carousel-o>
+                <div class="img-feature-proyect-container" data-aos="fade-up" data-aos-duration="1000" *ngIf="i%2!=0">
+                    <div class="img-feature-proyect-box">
+                        <div class="img-container" style='width: auto;'>
+                            <img class='img-feature-proyect rounded' [src]="project.imgs[0]" [alt]="project.imgs[0]" width='600px'>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div>
