--- a/src/app/components/home/jobs/jobs.component.html
+++ b/src/app/components/home/jobs/jobs.component.html
@@ -6,93 +6,21 @@
                     <span class='code-font n-section-title'>02.</span> {{"Experience.Title" | translate}}
                 </h3>
             </div>
-            <ngb-tabset class="jobs-tabs" data-aos="fade-up" data-aos-duration="1000">
-                <ngb-tab *ngFor='let job of "Experience.Jobs" | translate' [title]="job.Tab">
-                    <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>{{job.Title}} | <span class="company-tab-content">{{job.Tab}}</span></h4>
-                        <h5 class="job-time">{{job.Date}}</h5>
-                        <p class="job-description">{{job.Description}}</p>
-                        <span></span>
-                    </ng-template>
-                </ngb-tab>
-
-                <!-- <ngb-tab (click)='analyticsService.sendAnalyticEvent("click_proyex", "jobs", "jobs")' title="Proyex">
-                <ng-template ngbTabContent>
-                    <h4 class='title-tab-content'>Fullstack developer | <span class="company-tab-content">Proyex</span></h4>
-                    <h5 class="job-time">Diciembre 2019 - Actualidad </h5>
-                    <p class="job-description">
-                        Creación y mantenimiento de una plataforma de monitorio con gráficos en Wordpress. Programación funcional 
-                        en plantillas y plugins para añadir las características necesarias de monitorio.
-                        Implementación de integración continua y respaldos diarios. Creación y mantenimiento de una
-                        segunda plataforma de Monitoreo Realizada en Angular, Angular Material, Laravel, Mysql, RxJS, Sass con gráficos (configurables), sistema de alarmas, y gestión de usuarios
-                        y configuración de parámetros generales. Reuniones de planificación en informes.
-                    </p>
-                  <span></span>
-                </ng-template>
-              </ngb-tab>
-              <ngb-tab (click)='analyticsService.sendAnalyticEvent("click_freelancer", "jobs", "jobs")' title="Freelancer">
-                <ng-template ngbTabContent>
-                    <h4 class='title-tab-content'>Independiente | <span class="company-tab-content">Freelancer</span></h4>
-                    <h5 class="job-time">Mayo 2016 - Actualidad</h5>
-                    <p class="job-description">
-                        Implementando mejoras continuas, trabajando en frontend y backend. Creando plataformas
-                        con Angular, Laravel, ExpressJS, Wordpress programadas con paradigmas de programación funcional, reactiva
-                        y orientada a objetos.
-                    </p>
-                  <span></span>
-                </ng-template>
-              </ngb-tab>
-                <ngb-tab (click)='analyticsService.sendAnalyticEvent("click_moebius", "jobs", "jobs")' title="Moebius">
-                  <ng-template ngbTabContent>
-                      <h4 class='title-tab-content'>FullStack developer | <span class="company-tab-content">Moebius</span></h4>
-                      <h5 class="job-time">Julio 2017 - Octubre 2018</h5>
-                      <p class="job-description">
-                        Liderando un equipo de 4 personas en el desarrollo de una plataforma
-                        de gestión de Datos de turismo hecha en Angular, Laravel y MySQL. 
-                        Implementando CI/CD en Azure. Refactorizando y optimizando tiempos de carga
-                        de la aplicación. Codificación de peticiones a API con RxJS. Redacción de informes
-                        semanales acerca de metas y planes.
-                      </p>
-                    <span></span>
-                  </ng-template>
-                </ngb-tab>
-                  <ngb-tab (click)='analyticsService.sendAnalyticEvent("click_techLatam", "jobs", "jobs")' title="TechLatam">
-                    <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Frontend developer | <span class="company-tab-content">TechLatam</span></h4>
-                        <h5 class="job-time">Febrero 2016 - Mayo 2017</h5>
-                        <p class="job-description">
-                            Creación de plantillas de wordpress con ACF, programación funcional en Javascript / jQuery,
-                            estilos en SASS, integración de mejoras en diseño y tiempos de carga de plantillas.
-                            Comunicación efectiva con equipo de diseño, trabajando con Avocode / Figma
-                        </p>
-                      <span></span>
-                    </ng-template>
-                  </ngb-tab>
-                  <ngb-tab (click)='analyticsService.sendAnalyticEvent("click_cantv", "jobs", "jobs")' title="CANTV">
-                    <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Analista de sistema | <span class="company-tab-content">CANTV</span></h4>
-                        <h5 class="job-time">Noviembre 2015 - Diciembre 2016</h5>
-                        <p class="job-description">
-                            CANTV, empresas de telecomunicaciones más grandes del país. Como asignaciones regulares, debía
-                            programar nuevas funcionalidades para una plataforma de gestión de empleados existente realizada en Angular y ExpressJS,
-                            Realizar refactorización de código antiguo. Asegurar la compatibilidad de cada dependencia en cada actualización, junto también
-                            con la actualización regular de Angular
-                        </p>
-                      <span></span>
-                    </ng-template>
-                  </ngb-tab>
-                  <ngb-tab (click)='analyticsService.sendAnalyticEvent("click_iep", "jobs", "jobs")' title="IEP">
-                    <ng-template ngbTabContent>
-                        <h4 class='title-tab-content'>Profesor de Inglés | <span class="company-tab-content">IEP</span></h4>
-                        <h5 class="job-time">Enero 2015 - Julio 2015</h5>
-                        <p class="job-description">
-                            Enseñando ingles a nivel básico a una matrícula de más de 200 alumnos.
-                        </p>
-                      <span></span>
-                    </ng-template>
-                  </ngb-tab> -->
-
-            </ngb-tabset>
+            <div class="jobs-tabs">
+              <ul ngbNav #nav="ngbNav" [(activeId)]="active" orientation="vertical" class="nav-tabs jobs-tabs">
+                    <li *ngFor='let job of "Experience.Jobs" | translate; let i = index' [title]="job.Tab" [ngbNavItem]="i">
+                      <a ngbNavLink>{{job.Tab}}</a>
+                        <ng-template ngbNavContent>
+                          <h4 class='title-tab-content'>{{job.Title}} | <span class="company-tab-content">{{job.Tab}}</span></h4>
+                          <h5 class="job-time">{{job.Date}}</h5>
+                          <p class="job-description">{{job.Description}}</p>
+                          <span></span>
+                        </ng-template>
+                    </li>
+              </ul>
+              <div [ngbNavOutlet]="nav" class="mt-2"></div> 
+            </div>
+            
         </div>
     </div>
 </section>
