--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -39,7 +39,7 @@
                         </ul>
                         <div [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="proyect-links">
                             <a *ngIf="project['gh-link']" style='color: inherit' [href]="project['gh-link']" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                            <a style='color: inherit' [href]="project['Link-demo']" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                            <a *ngIf="project['Link-demo']" style='color: inherit' [href]="project['Link-demo']" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                 </div>
@@ -60,137 +60,8 @@
                     </div>
                 </div>
             </div>
-
             <div>
             </div>
-
-            <!-- <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="proyect-info-left h-100" style="background-image: url('assets/images/hands-game.png')">
-                    <div class="proyect-box">
-                        <h4 class="text-left feature-proyect">Proyecto Destacado</h4>
-                        <h5 class="text-left proyect-name">Hands game</h5>
-
-                        <div class="proyect-description-box">
-                            <p class="mb-0">
-                                Juego de piedra papel y tijeras extendido. Un proyecto personal desarrollado en angular en el que juegas al azar contra la máquina. Cuenta con la utilización de servicios, interfaces y componentes
-
-                            </p>
-                        </div>
-                        <ul class="proyect-skills justify-content-star">
-                            <li class="mr-3">Angular</li>
-                            <li class="mr-3">CSS GRID</li>
-                            <li class="mr-3">SASS</li>
-                            <li class="mr-3">Angular animations</li>
-                        </ul>
-                        <div class="proyect-links text-left">
-                            <a (click)='analyticsService.sendAnalyticEvent("click_handsgame_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/hands-game" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                            <a (click)='analyticsService.sendAnalyticEvent("click_handsgame_external_link", "proyects", "click")' style='color: inherit' href="https://handsgame.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="img-feature-proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                    <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect rounded' src="assets/images/hands-game.png" alt="" width='600px'>
-                    </div>
-                </div>
-            </div> -->
-
-
-
-
-            <!-- <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="img-feature-proyect-container">
-                    <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect rounded' src="assets/images/agrourbana.png" alt="" width='600px'>
-                    </div>
-                </div>
-                <div class="proyect-info-right h-100" style="background-image: url('assets/images/agrourbana.png');">
-                    <div class="proyect-box">
-                            <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-right proyect-name">Agrourbana</h5>
-
-                            <div class="proyect-description-box">
-                                <p class="mb-0">Aplicación de monitoreo realizada desde cero con módulo de auth, gráficos configurables, alarmas configurables y gestión de usuarios.
-                                    Cuenta también con lógica de formularios reactvios para la configuración de parámetros.
-                                </p>
-                            </div>
-                            <ul class="proyect-skills justify-content-end">
-                                <li class="ml-3">Laravel</li>
-                                <li class="ml-3">Angular</li>
-                                <li class="ml-3">SASS</li>
-                                <li class="ml-3">Angular Material</li>
-                                <li class="ml-3">RxJS</li>
-                            </ul>
-                            <div class="proyect-links text-right">
-                                <a (click)='analyticsService.sendAnalyticEvent("click_agrourbana_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/agrourbana" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a (click)='analyticsService.sendAnalyticEvent("click_agrourbana_external_link", "proyects", "click")' style='color: inherit' href="https://agrourbana.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
-                            </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="proyect-info-left h-100" style="background-image: url('assets/images/hands-game.png')">
-                    <div class="proyect-box">
-                            <h4 class="text-left feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-left proyect-name">Hands game</h5>
-
-                            <div class="proyect-description-box">
-                                <p class="mb-0">
-                                    Juego de piedra papel y tijeras extendido. Un proyecto personal desarrollado en angular
-                                    en el que juegas al azar contra la máquina. Cuenta con la utilización de servicios, interfaces y componentes
-
-                                </p>
-                            </div>
-                            <ul class="proyect-skills justify-content-star">
-                                <li class="mr-3">Angular</li>
-                                <li class="mr-3">CSS GRID</li>
-                                <li class="mr-3">SASS</li>
-                                <li class="mr-3">Angular animations</li>
-                            </ul>
-                            <div class="proyect-links text-left">
-                                <a (click)='analyticsService.sendAnalyticEvent("click_handsgame_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/hands-game" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a (click)='analyticsService.sendAnalyticEvent("click_handsgame_external_link", "proyects", "click")' style='color: inherit' href="https://handsgame.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
-                            </div>
-                    </div>
-                </div>
-                <div class="img-feature-proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                    <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect rounded' src="assets/images/hands-game.png" alt="" width='600px'>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="img-feature-proyect-container">
-                    <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect rounded' src="assets/images/countries-viewer.png" alt="" width='600px'>
-                    </div>
-                </div>
-                <div class="proyect-info-right h-100" style="background-image: url('assets/images/countries-viewer.png');">
-                    <div class="proyect-box">
-                            <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-right proyect-name">Countries viewer</h5>
-
-                            <div class="proyect-description-box">
-                                <p class="mb-0">
-                                    Interfaz que consume una API de países con el que se pueden visualizar lista de países, ver detalles de cada país,
-                                    filtrar por nombre y región. Ademas cuenta con un dark mode para alternar entre el tema oscuro y el claro
-                                </p>
-                            </div>
-                            <ul class="proyect-skills justify-content-end">
-                                <li class="ml-3">Angular</li>
-                                <li class="ml-3">RxJS</li>
-                                <li class="ml-3">SASS</li>
-                                <li class="ml-3">API</li>
-                            </ul>
-                            <div class="proyect-links text-right">
-                                <a (click)='analyticsService.sendAnalyticEvent("click_countriesviewer_github", "proyects", "click")' style='color: inherit' href="https://github.com/andresjosehr/countries-viewer" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a (click)='analyticsService.sendAnalyticEvent("click_countriesviewer_external_link", "proyects", "click")' style='color: inherit' href="https://countriesviewer.andresjosehr.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
-                            </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </div>
 </section>
