--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -11,11 +11,7 @@
                     <h3>Frontend Developer</h3>
                 </div>
                 <div class='banner-description'>
-                    <p class="mt-4">
-
-                        {{"Banner.Description" | translate}}
-
-                    </p>
+                    <p [innerHTML]='"Banner.Description" | translate' class="mt-4"></p>
                 </div>
             </div>
             <div class="div-btn-banner">
