--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -30,12 +30,13 @@
                         <h5 [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="proyect-name">{{project.Title}}</h5>
 
                         <div class="proyect-description-box" (click)='debug()'>
-                            <p class="mb-0">
-                                {{project.Description}}
+                            <p class="mb-0" [innerHTML]="project.Description">
                             </p>
                         </div>
                         <ul [class.justify-content-end]='i%2==0' [class.justify-content-start]='i%2!=0' class="proyect-skills">
-                            <li *ngFor='let technology of project.Technologies' class="ml-3">{{technology}}</li>
+                            <li *ngFor='let technology of project.Technologies' class="ml-3">
+                              <span class="underline technology">{{technology}}</span>
+                            </li>
                         </ul>
                         <div [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="proyect-links">
                             <a *ngIf="project['gh-link']" style='color: inherit' [href]="project['gh-link']" target="_blank"><i class="ml-3 fab fa-github"></i></a>
