--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -9,18 +9,17 @@
             <div class="row">
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <div class="about-description">
-                        <p *ngFor='let text of "AboutMe.Paragraphs" | translate' data-aos="fade-up" data-aos-duration="1000">
-                            {{text}}
+                        <p *ngFor='let text of "AboutMe.Paragraphs" | translate' [innerHTML]="text" data-aos="fade-up" data-aos-duration="1000">
                         </p>
                         <ul class="skills-list" data-aos="fade-up">
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Angular</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">RxJS</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">HTML &amp; (S)CSS</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Laravel</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Express</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">WordPress</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">Jasmine / Karma (TDD)</li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000">CI / CD</li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Angular </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">RxJS </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">HTML &amp; (S)CSS </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Laravel </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Express </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">WordPress </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Jasmine / Karma (TDD) </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">CI / CD </span></li>
                         </ul>
                     </div>
                 </div>
