--- a/src/app/components/home/more-proyects/more-proyects.component.scss
+++ b/src/app/components/home/more-proyects/more-proyects.component.scss
@@ -35,6 +35,7 @@
             -webkit-transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
             transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
             background-color: $LightNavy;
+            cursor: pointer;
 
             &:hover {
                 -webkit-transform: translateY(-5px);
@@ -56,7 +57,7 @@
                 font-size: 22px;
                 color: $LightestSlate;
             }
-            
+
             .other-proyect-description{
                 font-size: 17px;
                 color: $LightSlate;
@@ -88,6 +89,9 @@
                     line-height: 1.75;
                     margin-right: 15px;
                     font-family: $CodeFont;
+                    .underline{
+                        padding-bottom: 3.5px;
+                    }
                 }
             }
         }
