--- a/src/app/components/home/proyects/proyects.component.scss
+++ b/src/app/components/home/proyects/proyects.component.scss
@@ -63,6 +63,9 @@
                     color: $Slate;
                     margin-bottom: 7px;
                     white-space: nowrap;
+                    .technology{
+                      padding-bottom: 5px;
+                    }
                 }
             }
             .proyect-links {
@@ -105,7 +108,7 @@
 }
 
 @media (min-width: 768px) {
-   
+
     .proyect-info-right,
     .proyect-info-left {
         background-image: none !important;
