--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
-            <li>
+            <!-- <li>
                 <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/andresjosehr" target='_blank'>
                     <i class="fab fa-github"></i>
                 </a>
@@ -10,10 +10,10 @@
                 <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/in/andresjosehr/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-            </li>
+            </li> -->
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:andresjosehr@gmail.com" target='_blank'>andresjosehr@gmail.com </a>
+            <!-- <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:andresjosehr@gmail.com" target='_blank'>andresjosehr@gmail.com </a> -->
         </div>
     </div>
 
